# logseq-mcp

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  中文指南.md  测试.md  测试结果.md
.github/actions/setup-logseq-mcp/: action.yml
.github/workflows/: ci.yml
doc/: 中文指南.md
src/: __init__.py  __main__.py  server.py
src/client/: __init__.py  base.py  cli.py  logseq.py
src/config/: __init__.py  settings.py
src/handlers/: __init__.py  prompts.py  tools.py
src/mcp_server_logseq/: server.py
src/models/: __init__.py  enums.py  responses.py  schemas.py
src/services/: __init__.py  blocks.py  graph.py  pages.py  queries.py
src/utils/: __init__.py  errors.py
tests/: __init__.py  conftest.py  test_client.py  test_handlers.py  test_models.py  test_services.py
