[project]
name = "mcp-server-logseq"
version = "1.1.0"
description = "An MCP server for LogSeq API with advanced features"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Daniel Zholkovsky", email = "daniel@zholkovsky.com" }]
maintainers = [{ name = "Daniel Zholkovsky", email = "daniel@zholkovsky.com" }]
keywords = ["http", "mcp", "llm", "automation", "logseq"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.2.1",
    "pydantic>=2.10.2",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "tenacity>=8.2.0",
    "ty>=0.0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "respx>=0.20.0",
    "factory-boy>=3.3.0",
    "faker>=20.0.0",
]
lint = [
    "ruff>=0.1.0",
    "ty",
    "pre-commit>=3.5.0",
]

[project.urls]
homepage = "https://github.com/dailydaniel/logseq-mcp"
repository = "https://github.com/dailydaniel/logseq-mcp"
issues = "https://github.com/dailydaniel/logseq-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
logseq-mcp = "src.client.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"


[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "D", "UP"]
ignore = ["D100", "D104"]



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
